# qhana-plugin-registry

./: .flake8  .flaskenv  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  tasks.py
docs/: api-architecture.md  cli.rst  conf.py  index.rst  requirements.txt
docs/source/: qhana_plugin_registry.api.blueprint.rst  qhana_plugin_registry.api.env.env.rst  qhana_plugin_registry.api.env.root.rst  qhana_plugin_registry.api.env.rst  qhana_plugin_registry.api.models.base_models.rst  qhana_plugin_registry.api.models.dynamic_base_model.rst  qhana_plugin_registry.api.models.env.rst  qhana_plugin_registry.api.models.generators.constants.rst  qhana_plugin_registry.api.models.generators.env.rst  qhana_plugin_registry.api.models.generators.plugins.rst  qhana_plugin_registry.api.models.generators.recommendations.rst  qhana_plugin_registry.api.models.generators.root.rst  qhana_plugin_registry.api.models.generators.rst  qhana_plugin_registry.api.models.generators.seeds.rst  qhana_plugin_registry.api.models.generators.services.rst  qhana_plugin_registry.api.models.generators.template_groups.rst  qhana_plugin_registry.api.models.generators.template_tabs.rst  qhana_plugin_registry.api.models.generators.templates.rst  qhana_plugin_registry.api.models.generators.type_map.rst  qhana_plugin_registry.api.models.pagination_util.rst  qhana_plugin_registry.api.models.plugins.rst  qhana_plugin_registry.api.models.recommendations.rst  qhana_plugin_registry.api.models.request_helpers.rst  qhana_plugin_registry.api.models.root.rst  qhana_plugin_registry.api.models.root_raw.rst  qhana_plugin_registry.api.models.rst  qhana_plugin_registry.api.models.seeds.rst  qhana_plugin_registry.api.models.service.rst  qhana_plugin_registry.api.models.templates.rst  qhana_plugin_registry.api.models.templates_raw.rst  qhana_plugin_registry.api.plugins.plugin.rst  qhana_plugin_registry.api.plugins.root.rst  qhana_plugin_registry.api.plugins.rst  qhana_plugin_registry.api.recommendations.root.rst  qhana_plugin_registry.api.recommendations.rst  qhana_plugin_registry.api.root.rst  qhana_plugin_registry.api.rst  qhana_plugin_registry.api.seeds.root.rst  qhana_plugin_registry.api.seeds.rst  qhana_plugin_registry.api.seeds.seed.rst  (+54 more)
migrations/: env.py
migrations/versions/: 566709537515_rename_plugin_filter_column.py  bf584f934a0e_add_group_key_and_icon_to_template_tabs.py  d4c27044618e_add_location_to_template_tabs.py  f60a586742e8_initial_db_schema.py
qhana_plugin_registry/: __init__.py  babel.py  celery.py  celery_worker.py  licenses.py  tasks.py
qhana_plugin_registry/api/: __init__.py  blueprint.py  root.py  util.py
qhana_plugin_registry/api/env/: __init__.py  env.py  root.py
qhana_plugin_registry/api/models/: __init__.py  base_models.py  dynamic_base_model.py  env.py  pagination_util.py  plugins.py  recommendations.py  request_helpers.py  root.py  root_raw.py  seeds.py  service.py  templates.py  templates_raw.py
qhana_plugin_registry/api/models/generators/: __init__.py  constants.py  env.py  plugins.py  recommendations.py  root.py  seeds.py  services.py  template_groups.py  template_tabs.py  templates.py  type_map.py
qhana_plugin_registry/api/plugins/: __init__.py  plugin.py  root.py
qhana_plugin_registry/api/recommendations/: __init__.py  root.py
qhana_plugin_registry/api/seeds/: __init__.py  root.py  seed.py
qhana_plugin_registry/api/services/: __init__.py  root.py  service.py
qhana_plugin_registry/api/template_tabs/: __init__.py  root.py  tab.py
qhana_plugin_registry/api/templates/: __init__.py  root.py  template.py
qhana_plugin_registry/api/templates copy/: root.py  template.py
qhana_plugin_registry/db/: __init__.py  cli.py  db.py  filters.py  pagination.py  util.py
qhana_plugin_registry/db/models/: __init__.py  env.py  model_helpers.py  plugins.py  seeds.py  services.py  templates.py
qhana_plugin_registry/recommendations/: __init__.py  context.py  main.py  util.py  voting.py
qhana_plugin_registry/recommendations/recommenders/: __init__.py  available_data_recommender.py  base_recommender.py  current_data_recommender.py  rule_based_recommender.py  step_data_recommender.py
qhana_plugin_registry/tasks/: __init__.py  plugin_discovery.py  plugin_filter.py  recommendations_context.py  tasks.py  url_mapped_requests.py
qhana_plugin_registry/templates/: licenses.html
qhana_plugin_registry/util/: logging.py  reverse_proxy_fix.py  ui_templates.py
qhana_plugin_registry/util/config/: __init__.py  celery_config.py  from_env.py
qhana_plugin_registry/util/debug_routes/: __init__.py  root.py  routes.py
tests/: conftests.py  test_db.py  utils.py
tests/plugin_filter/: test_plugin_filter.py  util.py
