[tool.poetry]
name = "qhana_plugin_registry"
version = "0.1.0"
description = "A template for Flask applications with SQLalchemy, Migrations and REST API"
authors = ["University of Stuttgart", "Fabian Bühler"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = { extras = ["dotenv"], version = "^2.0.0" }
invoke = "^1.6.0"
Flask-JWT-Extended = "^4.0.0"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.0"
flask-babel = "^2.0.0"
flask-smorest = "^0.39.0"
tomli = "^2.0.0"
celery = "^5.2.2"
redis = "^3.5.3"
requests = "^2.25.1"
typing-extensions = "^3.10.0"
psycopg2 = {version = "^2.9.3", optional = true}
PyMySQL = {version = "^1.0.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^21.4.3"
Sphinx = "^4.0.0"
recommonmark = "^0.7.0"
sphinxcontrib-redoc = "^1.6.0"
sphinx-click = "^3.0.0"
myst-parser = "^0.15.1"
pip-licenses = "^3.5.3"
pydeps = "^1.10.24"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
PyMySQL = ["PyMySQL"]

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.68.2"

[tool.black]
target-version = ["py310"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.sphinx]
copyright-year = 2022
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]
pluginrunner = ["https://qhana-plugin-runner.readthedocs.io/en/latest/"]


[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
heading_anchors = 2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}

[tool.sphinx.recommonmark]
# deprecated: use the MyST parser and settings instead
auto-toc-tree-section = "Contents"
enable-math = false
enable-inline-math = false
enable-eval-rst = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
