[tool.poetry]
name = "qhana_plugin_registry"
version = "0.1.0"
description = "A template for Flask applications with SQLalchemy, Migrations and REST API"
authors = ["University of Stuttgart", "Fabian Bühler"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = { extras = ["dotenv"], version = "^3.0.0" }
invoke = "^2.0.0"
Flask-JWT-Extended = "^4.6.0"
Flask-Cors = "^4.0.0"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.23"
Flask-Migrate = "^4.0.5"
flask-babel = "^4.0.0"
flask-smorest = "^0.42.3"
tomli = "^2.0.1"
celery = "^5.2.2"
redis = "^5.0.0"
requests = "^2.31.0"
typing-extensions = "^4.0.0"
psycopg = { version = "^3.1.18", optional = true }
PyMySQL = { version = "^1.1.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^6.1.0"
pytest = "^7.4.2"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^24.0.0"
Sphinx = "^7.2.6"
sphinxcontrib-redoc = "^1.6.0"
sphinx-click = "^5.1.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"
pip-licenses = "^4.3.3"
pydeps = "^1.10.24"
hypothesis = "^6.68.2"
# setuptools is required by sphinxcontrib-redoc
setuptools = "^70.0.0"
watchdog = "^4.0.1"

[tool.poetry.extras]
psycopg = ["psycopg"]
PyMySQL = ["PyMySQL"]

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py310"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.pytest.ini_options]
# filter warnings of libraries until we update them
filterwarnings = [
    "once:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning",
    # update celery/kombu to fix this
    "once:SelectableGroups dict interface is deprecated. Use select.:DeprecationWarning",
    # update flask sqlalchemy to fix this
    "once:'_app_ctx_stack' is deprecated and will be removed in Flask 2.3. Use 'g' to store data, or 'app_ctx' to access the current context.:DeprecationWarning",
]

[tool.sphinx]
copyright-year = 2022
theme = "sphinx_rtd_theme"     # theme must be added to the requirements first!
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]
pluginrunner = ["https://qhana-plugin-runner.readthedocs.io/en/latest/"]


[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
heading_anchors = 2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}


[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"
