[tool.poetry]
name = "qhana_plugin_registry"
version = "0.1.1"
description = "A template for Flask applications with SQLalchemy, Migrations and REST API"
authors = ["University of Stuttgart", "Fabian Bühler"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = { extras = ["dotenv"], version = "^3.1.0" }
invoke = "^2.2.1"
Flask-JWT-Extended = "^4.7.0"
Flask-Cors = "^4.0.1"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.43"
Flask-Migrate = "^4.1.0"
flask-babel = "^4.0.0"
flask-smorest = "^0.46.0"
tomli = "^2.2.1"
celery = "^5.6.2"
redis = "^7.0.0"
requests = "^2.32.5"
typing-extensions = "^4.0.0"
psycopg = { version = "^3.3.2", optional = true }
PyMySQL = { version = "^1.1.2", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
flake8 = "^7.3.0"
pytest = "^9.0.2"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^25.11.29"
Sphinx = "^8.2.3"
sphinx-click = "^6.0.0"
myst-parser = "^4.0.0"
pip-licenses-cli = { extras = ["spdx"], version = "^3.0.0" }
sphinxcontrib-redoc = "^1.6.0"
sphinx-rtd-theme = "^3.1.0"
pydeps = "^3.0.2"
hypothesis = "^6.105.2"
watchdog = "^6.0.0"

[tool.poetry.extras]
psycopg = ["psycopg"]
PyMySQL = ["PyMySQL"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.10"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py311"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.pytest.ini_options]
# filter warnings of libraries until we update them
filterwarnings = [
    "once:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning",
    # update celery/kombu to fix this
    "once:SelectableGroups dict interface is deprecated. Use select.:DeprecationWarning",
    # update flask sqlalchemy to fix this
    "once:'_app_ctx_stack' is deprecated and will be removed in Flask 2.3. Use 'g' to store data, or 'app_ctx' to access the current context.:DeprecationWarning",
]

[tool.sphinx]
copyright-year = 2022
theme = "sphinx_rtd_theme"
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]
pluginrunner = ["https://qhana-plugin-runner.readthedocs.io/en/latest/"]


[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
heading_anchors = 2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}


[build-system]
requires = ["poetry>=2.1.0"]
build-backend = "poetry.masonry.api"
